--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   margin: 0;
-  background-image: url("../public/4445555.jpg");
+  background-image: url("../public/background2.jpg");
   background-size: cover;
 }
 
