--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   margin: 0;
   background-image: url("../public/background2.jpg");
   background-size: cover;
+  height: 100vh;
 }
 
 .main__tableContainer {
